--- a/SurRound/Modules/HomeMap/Views/Base.lproj/Home.storyboard
+++ b/SurRound/Modules/HomeMap/Views/Base.lproj/Home.storyboard
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16092.1" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="t2a-zz-b8S">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16082.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,14 +12,14 @@
             <objects>
                 <viewController id="T9V-En-WM8" customClass="HomeViewController" customModule="SurRound" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XRS-Rl-U8U">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ja2-Ho-mF0" userLabel="Map View" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="556"/>
                             </view>
                             <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="M8w-fz-HHO">
-                                <rect key="frame" x="0.0" y="88" width="414" height="80"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="80"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="Ftl-zd-5B9"/>
@@ -32,8 +31,8 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="8.6666666666666661" width="70" height="63"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="8.5" width="70" height="63"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Wy7-RM-eK4">
                                             <rect key="frame" x="0.0" y="0.0" width="70" height="63"/>
@@ -99,7 +98,7 @@
                     <navigationItem key="navigationItem" id="1hh-oj-oPw">
                         <barButtonItem key="rightBarButtonItem" image="film.fill" catalog="system" id="0DL-mM-CkD">
                             <connections>
-                                <action selector="showVideoRecording:" destination="T9V-En-WM8" id="o8R-6M-WwG"/>
+                                <action selector="showNewStoryAction:" destination="T9V-En-WM8" id="o8R-6M-WwG"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
